<resources>

    <!-- app name -->
    <string name="app_name">Motivational Quotes</string>
    <string name="tagline">The Best Quotation App!</string>
    <string name="tagline2">Thousand Plus Motivational Quotes!</string>

    <!-- app ad section -->
    <string name="app_ad_id">ca-app-pub-5172296410195565~9204949407</string>
    <string name="banner_ad_unit_id">ca-app-pub-5172296410195565/1681682606</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-5172296410195565/8957537391</string>
    <!-- end of the ad section -->


    <!-- app social site links section -->
    <string name="facebook_url">https://www.facebook.com/</string>
    <string name="youtube_url">https://www.youtube.com</string>
    <string name="twitter_user_id">twitter://user?user_id=xahid</string> <!-- find your user id from here: http://gettwitterid.com/  -->
    <string name="twitter_url">https://twitter.com/</string>
    <string name="google_plus_url">https://plus.google.com</string>

    <!-- terms and conditions, privacy policy and faq url -->
    <string name="terms_url">https://docs.google.com/document/d/1e_vlA4Zq5wHDgORuUVt43yMZChB89xRjizaqzRAmih8/edit?usp=sharing</string>
    <string name="privacy_url">https://docs.google.com/document/d/1JdlMWHjHaJPda5i0Hc5rpE2Ow6X2DIyul_HrgBkvee0/edit?usp=sharing</string>
    <string name="faq_url">https://docs.google.com/document/d/1tyvup3jJwNVrnH6ZhsJtyDcaapoWRMZwGHlFFWoPhAA/edit?usp=sharing</string>

    <!-- about developer text  -->
    <string name="developer_name">xahid Saeed</string>
    <string name="developer_detail">Entrepreneur, United States</string>
    <string name="developer_message">If you like this app, please give it a good rating, share with friends and show your support to us.</string>

    <!-- developer page: replace the developer id by yours -->
    <string name="developer_page">https://play.google.com</string>
    <string name="alternate_dev_page">https://play.google.com</string>


    <string name="site_menu_home">Home</string>
    <string name="site_menu_gif">Gifs</string>
    <string name="site_menu_category_list">Categories</string>
    <string name="site_menu_fav">Favorites</string>
    <string name="site_menu_copy">Copy</string>
    <string name="site_menu_share">Share</string>
    <string name="site_menu_delete_all">Delete All</string>
    <string name="site_menu_copy_text">Copy Links</string>
    <string name="site_menu_share_post">Share Images</string>
    <string name="site_menu_download">Download Image</string>
    <string name="site_menu_set">Set as Wallpaper</string>
    <string name="delete_all_fav_item">Do you want to Delete all the Favorite items?</string>
    <string name="delete_fav_item">Do you want to remove this item from the Favorite list?</string>
    <string name="wallpaper_set">Wallpaper set!</string>
    <string name="wallpaper_set_failed">Failed to set Wallpaper!</string>
    <string name="wallpaper_download">Image successfully downloaded!</string>
    <string name="wallpaper_download_failed">Failed to download Image!</string>
    <string name="social">Social</string>
    <string name="youtube">YouTube</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google Plus</string>


    <string name="featured_posts">|Featured Quotes</string>
    <string name="featured">Featured Quotes</string>
    <string name="recent_posts">|Recent Quotes</string>
    <string name="recent">Recent Quotes</string>
    <string name="view_all">VIEW ALL</string>
    <string name="category">Categories</string>
    <string name="details_text">Details</string>
    <string name="others">Others</string>
    <string name="privacy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="rate">Rate App</string>
    <string name="more_app">More Apps</string>
    <string name="settings">Settings</string>
    <string name="about_dev">About Developer</string>
    <string name="exit">Exit</string>
    <!-- end of the site configuration section-->

    <string name="set_wallpaper">Set Wallpaper...</string>
    <string-array name="set_wallpaper_options">
        <item>Home Screen</item>
        <item>Lock Screen</item>
        <item>Both</item>
    </string-array>
    <string name="lock_screen_set">Lockscreen wallpaper set!</string>
    <string name="home_set">Homescreen wallpaper set!</string>
    <string name="both_set">Home and lockscreen wallpaper set!</string>

    <string name="search">Search</string>

    <string name="rate_title">Rate This App</string>
    <string name="rate_message">If you enjoy using this app, would you mind taking a moment to rate it 5 stars?
    It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rate_positive">rate now</string>
    <string name="rate_remind_later">Later</string>
    <string name="rate_never">No, Thanks</string>
    <string name="empty_result">No data!</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="tapAgain">Tap again to exit!</string>
    <string name="permission_not_granted">Permission not granted!</string>

    <string name="item_counter" formatted="false">%d / %d</string>
    <string name="share_text">Install App from:</string>
    <string name="send_to">Send To: </string>
    <string name="copy_to_clipboard">Copied to Clipboard!</string>
    <string name="added_to_fav">This image is added to Favorite list!</string>
    <string name="removed_from_fav">This image is removed from Favorite List!</string>
    <string name="delete_all_notification">Do you want to Delete all the Notifications?</string>

    <string name="close_prompt">Are you sure you want to close the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failed">Failed</string>
    <string name="no_internet">No internet!</string>


    <string name="matches">matches</string>
    <string name="placeholder">..</string>
    <string name="notifications">Notifications</string>
    <string name="read_post">Read Post</string>
    <string name="notification_title">Notification title: </string>
    <string name="notification_details">Notification details: </string>


    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summ">Turn on/off notification</string>
    <string name="pref_zoom_title">Zoom Controller</string>
    <string name="pref_zoom_summ">Enable zoom controller to zoom in/out pages</string>
    <string name="pref_text_title">Text size</string>
    <string name="select_size">Select text size</string>

    <string name="small_text">Small</string>
    <string name="default_text">Normal</string>
    <string name="large_text">Large</string>


</resources>
